--- a/index.css
+++ b/index.css
@@ -18,3 +18,17 @@ button {
   border: none;
   font-weight: bold;
 }
+
+ul{
+margin-top:20px;
+padding-left:0;
+list-style: none;
+}
+
+li{
+margin-top: 5px;
+
+}
+
+a{
+color:#5f9341;
