--- a/index.css
+++ b/index.css
@@ -2,7 +2,10 @@ body {
   margin: 0;
   padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
+  min-width: 400px;
+
 }
+
 
 input {
   width: 100%;
@@ -32,3 +35,5 @@ margin-top: 5px;
 
 a{
 color:#5f9341;
+font-size: 20px;
+}
